export default class CalcularKilometros{
    public promedioKmDiarios(dias: number): number{
        return 0
    }
    public calcularKmTotales(kmIniciales: number, kmFinales: number): number{
        return 0
    }
}