export enum Temporada{
    BAJA = "Baja",
    MEDIA = "Media",
    ALTA = "Alta"
}