import Vehiculo from "./vehiculo";
import TarifaCompacto from "./TarifaCompacto";
import DatosMantenimiento from "./datosMantenimiento";

export default class Compacto extends Vehiculo{
    constructor(){
        super(new TarifaCompacto(), new DatosMantenimiento());
        this.tarifaBase = 30;
    }
}