import DatosEstadistica from "./datosEstadistica";
import Vehiculo from "./vehiculo";

export default class Estadistica {
    private vehiculos = Map<Vehiculo, DatosEstadistica>
    constructor(){

    }
}