import Vehiculo from "./vehiculo";
import TarifaSuv from "./TarifaSuv";

export default class SUV extends Vehiculo{
    constructor(){
        super(new TarifaSuv(), new DatosMantenimiento());
        this.tarifaBase = 80;
    }
}